# projeto_bd_ce

./: README.md  db_ce.md  teste.sql
BD/: Dockerfile  create_BD_CE.sql  descricao_tabelas.txt  inserção nas tabelas.sql  test_insercao.sql
api/: Dockerfile  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/app/: database.py  main.py  models.py  router.py  schemas.py  utils.py
api/app/routers/: __init__.py  abre_chamado_router.py  administrativo_router.py  agenda_router.py  agendamento_router.py  chamado_router.py  contagem_router.py  discente_router.py  docente_router.py  gerencia_router.py  gerenciador_router.py  horarios_router.py  laboratorio_router.py  room_router.py  sala_router.py  tecnico_router.py  usuario_router.py  visualiza_router.py  visualizar_router.py
api/test/: test_database.py  test_main.py  test_models.py  test_router.py
bd_ce/api/: main.py
bd_ce/index/: aluno.html  index.html  login.html  professor.html  tecnico.html
bd_ce/index/script/: script_i.js
bd_ce/index/style/: style.css  style_i.css  style_l.css
index/: cadastro.html  home.html  loading.html
index/script/: script.js  script_l.js
maria/: Dockerfile
maria/script/: inserção nas tabelas.sql  script_bd_ce.sql  test_insercao.sql
